# secretbox

./: .buildignore  .gitignore  CHANGELOG.md  README.md  build.sh  djangokey.sh  install.sh  main.py  makefile  package-lock.json  pyproject.toml
account/: admin.py  apps.py  forms.py  managers.py  models.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_memberprofile_myuser_member_delete_profile_and_more.py
config/: __init__.py  settings.py  urls.py
config/settings/: base.py  dev.py  prod.py
templates/: base.html
templates/account/: dashboard.html  login.html  register.html  register_done.html
theme/static_src/: package.json
theme/static_src/src/: input.css
